syntax = "proto3";


option go_package = "./;users";

service Users {
  rpc GetUser(GetUserRequest) returns (UserResponse) {}
}


message GetUserRequest {
  int64 id = 1;
}

message UserResponse {
  string username = 1;
  string email = 2;
}

